# iai_image_logging

./: .rosinstall  .travis.yml  CMakeLists.txt  compressed_nodelet.xml  dependencies.rosinstall  iai_image_logging.xml  iai_nodelet.xml  iai_nodelets.xml  package.xml  raw_nodelet.xml  theora_nodelet.xml
include/: blur_detector.h  image_logger.h  similarity_detector.h  storage.h  storage_sub.h
include/features/: blur_detector.h  motion_detector.h  similarity_detector.h
include/header/: iai_configurator.h  iai_subscriber.h  iai_updater.h
launch/: image_logger.launch  image_logger_nodelets.launch  kinect_and_logger.launch  kinect_and_logger_w_nodelet.launch  kinect_setup.launch  logger.launch  matrix.launch  prep_and_log.launch  unused_functions
scripts/: add.py  behave.py  color_config_client.py  config_client.py  del.py  insert.py  load_image.py  remove.py  setup.py  setup_yaml.py  theora_config_client.py
scripts/WIP/: add_conf.py
scripts/testing/: add.py  add_yaml.py  all_config_client.py
scripts/testing/comparison/: compression_bag_mongo.py  exp1_comp_bag_mongo.py
src/: Initiator.cpp  Initiator.h  blur_detector.cpp  blur_detector.h  camera.cpp  camera.h  compressed_nodelet.cpp  compressed_nodelet.h  config_client.py  configurator.cpp  configurator.h  connector.cpp  connector.h  iai_configurator.cpp  iai_nodelet.cpp  iai_nodelet.h  iai_nodelets.cpp  iai_nodelets.h  iai_subscriber.cpp  iai_updater.cpp  image_logger.cpp  image_logger.h  image_logger_types.h  logger.cpp  logger.h  preprocessor.cpp  preprocessor.h  raw_nodelet.cpp  raw_nodelet.h  similarity_detector.h  storage.cpp  storage.h  storage_sub.cpp  storage_sub.h  theora_nodelet.cpp  theora_nodelet.h
yaml/: created_py.yaml  default.yaml
yaml/matrix/: all_config.txt  compressed_config.txt  compressed_config_client.py  depth_all_config.txt  depth_image_raw.yaml  depth_image_raw_compressed_depth_png_1.yaml  depth_image_raw_compressed_depth_png_3.yaml  depth_image_raw_compressed_depth_png_5.yaml  depth_image_raw_compressed_depth_png_7.yaml  depth_image_raw_compressed_depth_png_9.yaml  depth_registered_image.yaml  depth_registered_image_compressed_depth_png_1.yaml  depth_registered_image_compressed_depth_png_3.yaml  depth_registered_image_compressed_depth_png_5.yaml  depth_registered_image_compressed_depth_png_7.yaml  depth_registered_image_compressed_depth_png_9.yaml  dr_dump.yaml  dump.yaml  rgb_image_color.yaml  rgb_image_raw.yaml  rgb_image_raw_jpeg_1.yaml  rgb_image_raw_jpeg_100.yaml  rgb_image_raw_jpeg_20.yaml  rgb_image_raw_jpeg_40.yaml  rgb_image_raw_jpeg_60.yaml  rgb_image_raw_jpeg_80.yaml  rgb_image_raw_png_1.yaml  rgb_image_raw_png_3.yaml  rgb_image_raw_png_5.yaml  rgb_image_raw_png_7.yaml  rgb_image_raw_png_9.yaml  rgb_image_raw_theora_1.yaml  rgb_image_raw_theora_11.yaml  rgb_image_raw_theora_24.yaml  rgb_image_raw_theora_37.yaml  rgb_image_raw_theora_50.yaml  rgb_image_raw_theora_63.yaml  theora_config.txt  theora_config_client.py
yaml/matrix/image_color/: color_config.txt  rgb_image_raw_jpeg_1.yaml  rgb_image_raw_jpeg_100.yaml  rgb_image_raw_jpeg_20.yaml  rgb_image_raw_jpeg_40.yaml  rgb_image_raw_jpeg_60.yaml  rgb_image_raw_jpeg_80.yaml  rgb_image_raw_png_1.yaml  rgb_image_raw_png_3.yaml  rgb_image_raw_png_5.yaml  rgb_image_raw_png_7.yaml  rgb_image_raw_png_9.yaml  rgb_image_raw_theora_1.yaml  rgb_image_raw_theora_11.yaml  rgb_image_raw_theora_24.yaml  rgb_image_raw_theora_37.yaml  rgb_image_raw_theora_50.yaml  rgb_image_raw_theora_63.yaml
